--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ p {
   display: inline-block;
   padding: 10px 20px;
   margin-top: 20px;
-  background-color: #007bff;
+  background-color: #46709e;
   color: #fff;
   text-decoration: none;
   border-radius: 3px;
